<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="ProcessBlock" Id="{d5a82c08-2d96-41c2-b237-9a8ed9e22122}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK ProcessBlock
VAR_INPUT
	ixIncPos: BOOL ;
	ixDecPos: BOOL;
END_VAR
VAR_OUTPUT
	PosValue: UINT := 0;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
IF GVL.ixButtManual OR GVL.ixButtAuto THEN
	IF ixIncPos AND PosValue <= 900 AND NOT GVL.qxSensor2 THEN
		IF PosValue > 895 AND PosValue < 900 THEN
			PosValue := 900;
		ELSIF PosValue <= 895 THEN
			PosValue := PosValue + 5;
		END_IF
	END_IF

	IF ixDecPos AND PosValue >= 0 AND NOT GVL.qxSensor1 THEN
		IF PosValue < 5 AND PosValue > 0 THEN
			PosValue := 0;
		ELSIF PosValue >= 5 THEN
			PosValue := PosValue - 5;
		END_IF
	END_IF
END_IF




]]></ST>
    </Implementation>
    <LineIds Name="ProcessBlock">
      <LineId Id="27" Count="2" />
      <LineId Id="50" Count="1" />
      <LineId Id="57" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="31" Count="2" />
      <LineId Id="53" Count="1" />
      <LineId Id="59" Count="1" />
      <LineId Id="55" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="82" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="62" Count="1" />
      <LineId Id="80" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>